<resources>
    <string name="app_name"><b><![CDATA[Buy&Sell]]></b></string>
    <string name="header"><![CDATA[Buy&Sell]]></string>
    <string name="welcome">Welcome!</string>
    <string name="logo"><![CDATA[Buy&Sell]]> logo</string>
    <string name="subheader">We are glad to see you! Here you can find something new or sell things</string>

    <string name="no_account"><u>No account yet? Create new one</u></string>
    <string name="already_member"><u>Already member? Login</u></string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="signup">Sign up</string>
    <string name="settings">Settings</string>

    <string name="auth">Authenticating…</string>
    <string name="creating_account">Creating account…</string>

    <string name="email_error">Enter valid email address</string>
    <string name="password_error">At least 5 characters</string>
    <string name="auth_error">Incorrect credentials</string>
    <string name="signup_error">Signup failed. Try again</string>
    <string name="not_empty_error">Should not be empty</string>
    <string name="phone_error">Enter valid phone number</string>
    <string name="password_not_match">Passwords do not match</string>

    <string name="home_fragment">Home</string>
    <string name="catalog">Catalog</string>
    <string name="profile">Profile</string>
    <string name="details">Details</string>
    <string name="my_products">My products</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="hint_search">Product name or category</string>
    <string name="product_photo">Product Photo</string>
    <string name="seller">Seller: </string>
    <string name="please_wait">Please wait...</string>
    <string name="server_error">Error reading data from server</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
</resources>
