<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|always"/>

    <item
        android:icon="@drawable/ic_action_cart"
        android:id="@+id/action_cart" android:title="@string/cart"
        android:orderInCategory="101" app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings" android:title="@string/settings"
        android:orderInCategory="102" app:showAsAction="never" />
</menu>