<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/activity_signup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.famcs.pasevinapolina.buyandsell.SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_vertical_padding">

        <ImageView android:src="@drawable/header_logo"
           android:layout_width="wrap_content"
           android:layout_height="72dp"
           android:layout_marginBottom="@dimen/activity_vertical_padding"
           android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/header"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textSize="20sp"/>

        <!-- Login -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_login"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:hint="@string/login" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Confirm Password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_confirm"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/confirm_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/signup"/>

        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/already_member"
                  android:gravity="center"
                  android:textAppearance="@style/LinkFont" />

    </LinearLayout>

</ScrollView>


    <!-- Name -->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginBottom="8dp">-->
    <!--<EditText android:id="@+id/input_name"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textPersonName"-->
    <!--android:hint="@string/name" />-->
    <!--</android.support.design.widget.TextInputLayout>-->

    <!--&lt;!&ndash; Last Name  &ndash;&gt;-->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginBottom="8dp">-->
    <!--<EditText android:id="@+id/input_last_name"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textPersonName"-->
    <!--android:hint="@string/last_name" />-->
    <!--</android.support.design.widget.TextInputLayout>-->

    <!--&lt;!&ndash; Phone number &ndash;&gt;-->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginBottom="8dp">-->
    <!--<EditText android:id="@+id/input_phone"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="phone"-->
    <!--android:hint="@string/phone_number" />-->
    <!--</android.support.design.widget.TextInputLayout>-->
