<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/list_image_bg"
        android:layout_marginRight="5dip"
        android:layout_marginEnd="5dip">

        <ImageView
            android:id="@+id/product_list_image"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:src="@drawable/logo"
            android:contentDescription="@string/product_photo"/>

    </LinearLayout>

    <!-- Title Of Product-->
    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/thumbnail"
        android:layout_toRightOf="@id/thumbnail"
        android:layout_toEndOf="@id/thumbnail"
        android:text=""
        android:textAppearance="@style/SubHeaderText"/>

    <!-- Rightend Price -->
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end|top"
        android:text=""
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>


    <!-- Rightend Arrow -->
    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/details"/>

    <!-- Rightend On Sale Price -->
    <TextView
        android:id="@+id/on_sale_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:text=""
        android:textAppearance="@style/PriceText"
        android:layout_below="@+id/arrow"
        android:layout_toLeftOf="@+id/arrow"
        android:layout_toStartOf="@+id/arrow"/>


    <TextView
        android:id="@+id/brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/product_title"
        android:textAppearance="@style/NormalText"
        android:layout_toRightOf="@id/thumbnail"
        android:layout_toEndOf="@id/thumbnail"/>

    <!-- Seller -->
    <TextView
        android:id="@+id/seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SmallText"
        android:text="@string/seller"
        android:layout_below="@+id/brand"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toEndOf="@+id/thumbnail"
        android:layout_marginTop="@dimen/activity_vertical_padding"/>

</RelativeLayout>